Comprehensive S3 Image Upload Fix

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -2,12 +2,12 @@
 JWT_SECRET=your_super_secret_jwt_key_here_make_it_long_and_random
 JWT_EXPIRES_IN=7d
 
-# AWS Configuration
+# AWS Configuration - CRITICAL for S3 image uploads
 AWS_ACCESS_KEY_ID=your_aws_access_key_id
 AWS_SECRET_ACCESS_KEY=your_aws_secret_access_key
 AWS_REGION=ap-south-1
 
-# S3 Configuration
+# S3 Configuration - REQUIRED for image uploads
 S3_BUCKET=your-s3-bucket-name
 S3_REGION=ap-south-1
 
@@ -18,7 +18,7 @@ WARDROBE_TABLE=StyleAI_Wardrobe
 # Frontend URL
 FRONTEND_URL=http://localhost:5173
 
-# OpenAI Configuration
+# OpenAI Configuration (Optional)
 OPENAI_API_KEY=your_openai_api_key_here
 
 # External APIs (Optional)
